Compiler1/hw3/AstParser.java
/* Generated By:JavaCC: Do not edit this line. AstParser.java */
import java.util.*;
import java.io.*;
import ast.*;

public class AstParser implements AstParserConstants {
  public static void main(String [] args) throws Exception {
    if (args.length == 1) {
      FileInputStream stream = new FileInputStream(args[0]);
      Ast.Program p = new AstParser(stream).Program();
      stream.close();
      System.out.print(p);
    } else {
      System.out.println("Need one file name as command-line argument.");
    }
  }

// Parsing routines needed ...

// Program -> {ClassDecl}
  static final public Ast.Program Program() throws ParseException {
  List<Ast.ClassDecl> cl = new ArrayList<Ast.ClassDecl>();
  Ast.ClassDecl c;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case kwClassDecl:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      c = ClassDecl();
                    cl.add(c);
    }
    jj_consume_token(0);
    {if (true) return new Ast.Program(cl);}
    throw new Error("Missing return statement in function");
  }

//ClassDecl  -> "ClassDecl" <Id> [<Id>] {VarDecl} {MethodDecl}
  static final public Ast.ClassDecl ClassDecl() throws ParseException {
  List<Ast.VarDecl> vl = new ArrayList<Ast.VarDecl>();
  List<Ast.MethodDecl> ml = new ArrayList<Ast.MethodDecl>();
  String cn, pn=null;
  Ast.VarDecl v;
  Ast.MethodDecl m;
    jj_consume_token(kwClassDecl);
    cn = Id();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Id:
      pn = Id();
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case kwVarDecl:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      v = VarDecl();
                  vl.add(v);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case kwMethodDecl:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      m = MethodDecl();
                     ml.add(m);
    }
    {if (true) return new Ast.ClassDecl(cn, pn, vl, ml);}
    throw new Error("Missing return statement in function");
  }

//MethodDecl -> "MethodDecl" Type <Id> "(" {Param} ")" {VarDecl} {Stmt}
  static final public Ast.MethodDecl MethodDecl() throws ParseException {
  List<Ast.Param> fl = new ArrayList<Ast.Param>();
  List<Ast.VarDecl> vl = new ArrayList<Ast.VarDecl>();
  List<Ast.Stmt> sl = new ArrayList<Ast.Stmt>();
  String mn;
  Ast.Type t;
  Ast.Param f;
  Ast.VarDecl v;
  Ast.Stmt s;
    jj_consume_token(kwMethodDecl);
    t = Type();
    mn = Id();
    jj_consume_token(57);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 57:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      f = Param();
                                                  fl.add(f);
    }
    jj_consume_token(58);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case kwVarDecl:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_5;
      }
      v = VarDecl();
                  vl.add(v);
    }
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case kwAssign:
      case kwCallStmt:
      case kwIf:
      case kwPrint:
      case kwReturn:
      case kwWhile:
      case 61:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_6;
      }
      s = Stmt();
                                               sl.add(s);
    }
    {if (true) return new Ast.MethodDecl(t, mn, fl, vl, sl);}
    throw new Error("Missing return statement in function");
  }

//VarDecl    -> "VarDecl" Type <Id> Exp
  static final public Ast.VarDecl VarDecl() throws ParseException {
  String vn;
  Ast.Type t;
  Ast.Exp init;
    jj_consume_token(kwVarDecl);
    t = Type();
    vn = Id();
    init = Exp();
    {if (true) return new Ast.VarDecl(t, vn, init);}
    throw new Error("Missing return statement in function");
  }

//Param      -> "(" Type <Id> ")"
  static final public Ast.Param Param() throws ParseException {
 String vn; Ast.Type t;
    jj_consume_token(57);
    jj_consume_token(kwParam);
    t = Type();
    vn = Id();
    jj_consume_token(58);
    {if (true) return new Ast.Param(t, vn);}
    throw new Error("Missing return statement in function");
  }

//Type   -> "void" 
//       | "IntType" 
//       | "BoolType" 
//       | "(" "ObjType" <Id> ")"
//       | "(" "ArrayType" Type ")"
  static final public Ast.Type Type() throws ParseException {
  String cn; Ast.Type t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case kwVoid:
      jj_consume_token(kwVoid);
                                    t = null;
      break;
    case kwIntType:
      jj_consume_token(kwIntType);
                                    t = new Ast.IntType();
      break;
    case kwBoolType:
      jj_consume_token(kwBoolType);
                                    t = new Ast.BoolType();
      break;
    case 57:
      jj_consume_token(57);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case kwObjType:
        jj_consume_token(kwObjType);
        cn = Id();
                                    t = new Ast.ObjType(cn);
        break;
      case kwArrayType:
        jj_consume_token(kwArrayType);
        t = Type();
                                    t = new Ast.ArrayType(t);
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(58);
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

//Stmt   -> "{" {Stmt} "}"
//       |  "Assign" Exp Exp
//       |  "CallStmt" Exp <Id> "(" {Exp} ")"
//       |  "If" Exp Stmt [ "Else" Stmt ]  
//       |  "While" Exp Stmt
//       |  "Print" (Exp | <StrLit>)
//       |  "Return" Exp
  static final public Ast.Stmt Stmt() throws ParseException {
  List<Ast.Exp> args = new ArrayList<Ast.Exp>();
  List<Ast.Stmt> sl = new ArrayList<Ast.Stmt>();
  String mn;
  Ast.Exp arg, lhs, rhs, obj, cond, val;
  Ast.Stmt s, s1, s2=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 61:
      jj_consume_token(61);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case kwAssign:
        case kwCallStmt:
        case kwIf:
        case kwPrint:
        case kwReturn:
        case kwWhile:
        case 61:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_7;
        }
        s = Stmt();
                     sl.add(s);
      }
      jj_consume_token(62);
                                           s = new Ast.Block(sl);
      break;
    case kwAssign:
      jj_consume_token(kwAssign);
      lhs = Exp();
      rhs = Exp();
                                    s = new Ast.Assign(lhs, rhs);
      break;
    case kwCallStmt:
      jj_consume_token(kwCallStmt);
      obj = Exp();
      mn = Id();
      jj_consume_token(57);
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case kwThis:
        case BoolLit:
        case IntLit:
        case StrLit:
        case Id:
        case 57:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_8;
        }
        arg = Exp();
                                                   args.add(arg);
      }
      jj_consume_token(58);
                                    s = new Ast.CallStmt(obj, mn, args);
      break;
    case kwIf:
      jj_consume_token(kwIf);
      cond = Exp();
      s1 = Stmt();
      if (jj_2_1(2)) {
        jj_consume_token(kwElse);
        s2 = Stmt();
      } else {
        ;
      }
                                    s = new Ast.If(cond, s1, s2);
      break;
    case kwWhile:
      jj_consume_token(kwWhile);
      cond = Exp();
      s = Stmt();
                                    s = new Ast.While(cond, s);
      break;
    case kwPrint:
      jj_consume_token(kwPrint);
      arg = Exp();
                                    s = new Ast.Print(arg);
      break;
    case kwReturn:
      jj_consume_token(kwReturn);
      val = Exp();
                                    s = new Ast.Return(val);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

//Exp    -> "(" ")"
//       |  "(" "Binop" BOP Exp Exp ")"
//       |  "(" "Unop" UOP Exp ")"
//       |  "(" "Call" Exp <Id> "(" {Exp} ")" ")"
//       |  "(" "NewObj" <Id> ")"
//       |  "(" "Field" Exp <Id> ")"
//       |  "(" "NewArray" Type <IntLit> ")"
//       |  "(" "ArrayElm" Exp Exp ")"
//       |  "This"
//       |  <Id>
//       |  <IntLit>
//       |  <BoolLit>
  static final public Ast.Exp Exp() throws ParseException {
  List<Ast.Exp> args = new ArrayList<Ast.Exp>();
  String cn, mn, vn, s;
  int sz, i;
  boolean b;
  Ast.BOP bop;
  Ast.UOP uop;
  Ast.Type et;
  Ast.Exp e=null, e1, e2, arg, obj, ar, idx;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 57:
      jj_consume_token(57);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case kwArrayElm:
      case kwBinop:
      case kwCall:
      case kwField:
      case kwNewArray:
      case kwNewObj:
      case kwUnop:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case kwBinop:
          jj_consume_token(kwBinop);
          bop = binOp();
          e1 = Exp();
          e2 = Exp();
                                              e = new Ast.Binop(bop, e1, e2);
          break;
        case kwUnop:
          jj_consume_token(kwUnop);
          uop = unOp();
          e = Exp();
                                              e = new Ast.Unop(uop, e);
          break;
        case kwCall:
          jj_consume_token(kwCall);
          obj = Exp();
          mn = Id();
          jj_consume_token(57);
          label_9:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case kwThis:
            case BoolLit:
            case IntLit:
            case StrLit:
            case Id:
            case 57:
              ;
              break;
            default:
              jj_la1[12] = jj_gen;
              break label_9;
            }
            arg = Exp();
                                                 args.add(arg);
          }
          jj_consume_token(58);
                                              e = new Ast.Call(obj, mn, args);
          break;
        case kwNewObj:
          jj_consume_token(kwNewObj);
          cn = Id();
          jj_consume_token(57);
          label_10:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case kwThis:
            case BoolLit:
            case IntLit:
            case StrLit:
            case Id:
            case 57:
              ;
              break;
            default:
              jj_la1[13] = jj_gen;
              break label_10;
            }
            arg = Exp();
                                         args.add(arg);
          }
          jj_consume_token(58);
                                              e = new Ast.NewObj(cn, args);
          break;
        case kwNewArray:
          jj_consume_token(kwNewArray);
          et = Type();
          sz = IntLit();
                                              e = new Ast.NewArray(et, sz);
          break;
        case kwField:
          jj_consume_token(kwField);
          obj = Exp();
          vn = Id();
                                              e = new Ast.Field(obj, vn);
          break;
        case kwArrayElm:
          jj_consume_token(kwArrayElm);
          ar = Exp();
          idx = Exp();
                                              e = new Ast.ArrayElm(ar, idx);
          break;
        default:
          jj_la1[14] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      jj_consume_token(58);
      break;
    case Id:
      vn = Id();
                                              e = new Ast.Id(vn);
      break;
    case kwThis:
      jj_consume_token(kwThis);
                                              e = new Ast.This();
      break;
    case IntLit:
      i = IntLit();
                                              e = new Ast.IntLit(i);
      break;
    case BoolLit:
      b = BoolLit();
                                              e = new Ast.BoolLit(b);
      break;
    case StrLit:
      s = StrLit();
                                              e = new Ast.StrLit(s);
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

//BOP    -> "+"  | "-"  | "*" | "/"  | "&&" | "||"
//       |  "==" | "!=" | "<" | "<=" | ">"  | ">="
  static final public Ast.BOP binOp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 40:
      jj_consume_token(40);
             {if (true) return Ast.BOP.ADD;}
      break;
    case 41:
      jj_consume_token(41);
             {if (true) return Ast.BOP.SUB;}
      break;
    case 42:
      jj_consume_token(42);
             {if (true) return Ast.BOP.MUL;}
      break;
    case 43:
      jj_consume_token(43);
             {if (true) return Ast.BOP.DIV;}
      break;
    case 44:
      jj_consume_token(44);
             {if (true) return Ast.BOP.AND;}
      break;
    case 45:
      jj_consume_token(45);
             {if (true) return Ast.BOP.OR;}
      break;
    case 47:
      jj_consume_token(47);
             {if (true) return Ast.BOP.EQ;}
      break;
    case 48:
      jj_consume_token(48);
             {if (true) return Ast.BOP.NE;}
      break;
    case 49:
      jj_consume_token(49);
             {if (true) return Ast.BOP.LT;}
      break;
    case 50:
      jj_consume_token(50);
             {if (true) return Ast.BOP.LE;}
      break;
    case 51:
      jj_consume_token(51);
             {if (true) return Ast.BOP.GT;}
      break;
    case 52:
      jj_consume_token(52);
             {if (true) return Ast.BOP.GE;}
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

//UOP    -> "-" | "!"
  static final public Ast.UOP unOp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 41:
      jj_consume_token(41);
             {if (true) return Ast.UOP.NEG;}
      break;
    case 46:
      jj_consume_token(46);
             {if (true) return Ast.UOP.NOT;}
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public String Id() throws ParseException {
  Token n;
    n = jj_consume_token(Id);
           {if (true) return n.image;}
    throw new Error("Missing return statement in function");
  }

  static final public int IntLit() throws ParseException {
  Token n;
    n = jj_consume_token(IntLit);
               {if (true) return Integer.parseInt(n.image);}
    throw new Error("Missing return statement in function");
  }

  static final public boolean BoolLit() throws ParseException {
  Token n;
    n = jj_consume_token(BoolLit);
                {if (true) return Boolean.parseBoolean(n.image);}
    throw new Error("Missing return statement in function");
  }

  static final public String StrLit() throws ParseException {
  Token n;
    n = jj_consume_token(StrLit);
               {if (true) return n.image.substring(1,n.image.length()-1);}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_3R_11() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_12()) {
    jj_scanpos = xsp;
    if (jj_3R_13()) {
    jj_scanpos = xsp;
    if (jj_3R_14()) {
    jj_scanpos = xsp;
    if (jj_3R_15()) {
    jj_scanpos = xsp;
    if (jj_3R_16()) {
    jj_scanpos = xsp;
    if (jj_3R_17()) {
    jj_scanpos = xsp;
    if (jj_3R_18()) return true;
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_scan_token(kwElse)) return true;
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3R_18() {
    if (jj_scan_token(kwReturn)) return true;
    return false;
  }

  static private boolean jj_3R_17() {
    if (jj_scan_token(kwPrint)) return true;
    return false;
  }

  static private boolean jj_3R_16() {
    if (jj_scan_token(kwWhile)) return true;
    return false;
  }

  static private boolean jj_3R_15() {
    if (jj_scan_token(kwIf)) return true;
    return false;
  }

  static private boolean jj_3R_14() {
    if (jj_scan_token(kwCallStmt)) return true;
    return false;
  }

  static private boolean jj_3R_13() {
    if (jj_scan_token(kwAssign)) return true;
    return false;
  }

  static private boolean jj_3R_12() {
    if (jj_scan_token(61)) return true;
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public AstParserTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[19];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x4000,0x0,0x80000000,0x200000,0x0,0x80000000,0xc042200,0x1000100,0x80800,0xc042200,0x20000000,0xc042200,0x20000000,0x20000000,0x40c21480,0x40c21480,0x20000000,0x0,0x0,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x80,0x0,0x0,0x2000000,0x0,0x20000002,0x0,0x2000001,0x20000002,0x20000e4,0x20000002,0x20000e4,0x20000e4,0x0,0x0,0x20000e4,0x1fbf00,0x4200,};
   }
  static final private JJCalls[] jj_2_rtns = new JJCalls[1];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;

  /** Constructor with InputStream. */
  public AstParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public AstParser(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new AstParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public AstParser(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new AstParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public AstParser(AstParserTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }
